<resources>
    <string name="app_name">寻至</string>
    <string name="login_title">欢迎来到寻至</string>
    <string name="login_string">登录</string>
    <string name="main_space">主页</string>
    <string name="main_collection">收藏夹</string>
    <string name="main_username">Username</string>
    <string name="login_emailAddress">邮箱</string>
    <string name="login_password">密码</string>
    <string name="tab_finding">寻物</string>
    <string name="tab_found">招领</string>
    <string name="rem_passwd">记住密码</string>
    <string name="reg_button">点此注册</string>
    <string name="profile_logout">退出登录</string>
    <string name="main_profile">个人信息</string>
    <string name="main_quit">退出登录</string>
    <string name="main_settings">设置</string>
    <string name="profile_center">个人中心</string>
    <string name="takePhoto">相机拍摄</string>
    <string name="chooseFromAlbum">从相册选择</string>
    <string name="LoremIpsum">Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
    Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
    Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</string>
    <string name="register_confirmpassword">确认密码</string>
    <string name="register_title">用户注册</string>
    <string name="regActivityButton">注册</string>
    <string name="editProfile">编辑</string>
    <string name="upload">发布</string>
    <string name="Date">日期</string>
    <string name="DatePicker">选择日期</string>
    <string name="place">地点</string>
    <string name="description">简要描述</string>
    <string name="setQuestion">设置安保问题</string>
    <string name="setAnswer">设置答案</string>
    <string name="mainSearch">搜索</string>
    <string name="brief_description">简要描述:</string>
    <string name="yes">确认</string>、
    <string name="no">取消</string>
    <string name="pressCardtoEdit">长按卡片修改信息</string>
    <string name="subject_name">物品名称</string>
    <string name="foundtitle">招领标题</string>
    <string name="foundtext">TextView</string>
    <string name="foundtime">找到的时间</string>
    <string name="foundplace">找到地点</string>
    <string name="foundemail">workemail@gmail.com</string>
    <string name="contextemail">联系邮箱</string>
    <string name="findemail">workemail@gmail.com</string>
    <string name="findplace">丢失地点</string>
    <string name="findtime">丢失时间</string>
    <string name="findtext">TextView</string>
    <string name="findtitle">寻物标题</string>
    <string name="information">信息填写</string>
</resources>