<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_backButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/add_toolbar"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/add_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/add_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/add_toolbar"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toEndOf="@+id/add_backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_check"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:drawableLeft="@drawable/ic_baseline_check_24"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/add_toolbar"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toEndOf="@+id/add_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_button_takePhoto"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/takePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_toolbar" />

    <Button
        android:id="@+id/add_button_fromAlbum"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/chooseFromAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_button_takePhoto"
        app:layout_constraintTop_toTopOf="@+id/add_button_takePhoto" />

    <ImageView
        android:id="@+id/add_imageView"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button_takePhoto"
        android:background="@drawable/imageview_border" />

    <Button
        android:id="@+id/add_btnDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/DatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_imageView" />

    <TextView
        android:id="@+id/add_tvDate"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:background="@drawable/textview_border"
        android:text="@string/Date"
        android:gravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/add_btnDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toEndOf="@+id/add_btnDatePicker"
        app:layout_constraintTop_toTopOf="@+id/add_btnDatePicker" />


</androidx.constraintlayout.widget.ConstraintLayout>